tests/semantica/valid/return/test2.ctds
program 
	{
        integer main(){
            return 2 + 2 * 3 + -2 + (3 + 2 / 3) % 2;
        }
    }