tests/semantica/invalid/return/test1.ctds
program
	{
		void main(){
			return 2;
		}
	}